enable to deal super class fields